welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: class Array takes type parameters
def col1(T:Array){
           ^Array1:20: error: class Array takes type parameters
def col(T:Array,nbr:Int){
          ^Array1:10: error: class Array takes type parameters
def col1(T:Array){
           ^Array1:20: error: class Array takes type parameters
def col(T:Array,nbr:Int){
          ^